# summer-grind

./: CMakeLists.txt  LICENSE  README.md
Exercises/Code Organization and Templates - Lab/01_Compile/: CompileMain.cpp  Defines.h
Exercises/Code Organization and Templates - Lab/02_Censorship/: Article13Filter.cpp  CensorshipMain.cpp
Exercises/Code Organization and Templates - Lab/03_Parser/: Parser.cpp  Parser.h  PrintUtils.cpp  PrintUtils.h
Exercises/Code Organization and Templates - Lab/04_SplitAndJoin/: Join.h  Split.h
Exercises/Code Organization and Templates - Lab/05_Sorting/: Comparators.h  Parser.h  PrintUtils.h
Exercises/Objects and Classes - Advanced_Exercise/02_SumOfVectors/: SumOfVectors.h
Exercises/Objects and Classes - Advanced_Exercise/04_Resources/: Resource.h
Exercises/Objects and Classes - Advanced_Exercise/05_Lectures/: Lecture.h  Resource.h
Exercises/Objects and Classes - Advanced_Exercise/06_MemoryAllocator/: MemoryAllocator.cpp  MemoryAllocator.h
Exercises/Objects and Classes - Advanced_Exercise/07_BytesParsing/: BytesParsing.cpp  BytesParsing.h
Exercises/Objects and Classes - Exercise/01_SentenceShifter/: main.cpp
Exercises/Objects and Classes - Exercise/02_Distance/: main.cpp
Exercises/Objects and Classes - Exercise/03_Sales/: main.cpp
Exercises/Objects and Classes - Exercise/04_TotalAverageOfStudents/: main.cpp
Exercises/Objects and Classes - Lab/01_Letters/: main.cpp
Exercises/Objects and Classes - Lab/02_Rust/: main.cpp
Exercises/Objects and Classes - Lab/03_Matching-Locations/: main.cpp
(+112 files in other folders)
