cmake_minimum_required(VERSION 3.27)
project(Solution-SoftuniCPP-OOP)

set(CMAKE_CXX_STANDARD 17)

add_executable(Solution-SoftuniCPP-OOP
        "Exercises/Sofuni_Summer2024/Rule Three_Five_Zero/07. List/Skeleton/ListMain.cpp"
        "Exercises/Sofuni_Summer2024/Rule Three_Five_Zero/07. List/Skeleton/List.cpp"


)