cmake_minimum_required(VERSION 3.27)
project(Solution-SoftuniCPP-OOP)

set(CMAKE_CXX_STANDARD 17)

add_executable(Solution-SoftuniCPP-OOP
    "Exercises/Sofuni_Summer2024/Fundamentals/Basic Syntax - Lab/06_SumOfOdds/main.cpp"
        "Exercises/Sofuni_Summer2024/Fundamentals/Basic Syntax - Lab/07_MulTable/main.cpp"


)