cmake_minimum_required(VERSION 3.27)
project(Solution-SoftuniCPP-OOP)

set(CMAKE_CXX_STANDARD 17)

add_executable(Solution-SoftuniCPP-OOP

        "Exercises/Sofuni_Summer2024/Fundamentals/Arrays - Exercises/09_MagicSum/main.cpp"
        "Exercises/Sofuni_Summer2024/Fundamentals/StringsAndStreams - Lab/01_ReverseStrings/main.cpp"


)